--- a/index.css
+++ b/index.css
@@ -67,6 +67,10 @@ input[type="number"] {
   appearance: none;
 }
 
+input[type="text"].smaller {
+  flex: 2 1 0px;
+}
+
 input[type="text"]:focus,
 input[type="number"]:focus {
   outline: 0;
