--- a/index.css
+++ b/index.css
@@ -106,3 +106,7 @@ button[type="submit"]:hover {
   background-color: #ff3340cc;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
 }
+
+.chris {
+  display: block;
+}
