--- a/index.css
+++ b/index.css
@@ -1,5 +1,109 @@
-@import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Lato|Parisienne');
 
 body {
   font-family: 'Lato', Helvetica, Arial, sans-serif;
+  margin: 0;
+}
+
+header {
+  background-image: url(chris.jpg);
+  background-size: contain;
+  height: 12vw;
+  background-repeat: no-repeat;
+  border: 0.5rem solid white;
+  margin-bottom: 20vw;
+}
+
+h1 {
+  font-family: Parisienne, cursive;
+  text-align: center;
+  margin: 0;
+  color: white;
+  font-size: 15vw;
+  text-shadow: 1px 1px 4px red,
+               1px 1px 7px green;
+}
+
+h2 {
+  text-align: center;
+  margin-top: -5.5vw;
+  font-size: 3vw;
+  font-weight: 400;
+}
+
+header img {
+  width: 80%;
+  display: block;
+  margin: -2vw auto 0;
+}
+
+form {
+  padding: 1rem;
+}
+
+form > div {
+  display: flex;
+  width: 100%;
+  align-items: stretch;
+}
+
+input[type="text"],
+input[type="number"] {
+  flex: 4 1 0px;
+  height: auto;
+  min-width: 0;
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  padding: .5rem;
+  border: 1px solid #cacaca;
+  background-color: #fefefe;
+  box-shadow: inset 0 1px 2px rgba(10,10,10,.1);
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #0a0a0a;
+  transition: box-shadow .5s,border-color .25s ease-in-out;
+  appearance: none;
+}
+
+input[type="text"].smaller {
+  flex: 2 1 0px;
+}
+
+input[type="text"]:focus,
+input[type="number"]:focus {
+  outline: 0;
+  border: 1px solid #8a8a8a;
+  background-color: #fefefe;
+  box-shadow: 0 0 5px #cacaca;
+}
+
+button[type="submit"] {
+  background-color: #ff3340;
+  color: white;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+  height: auto;
+  align-self: stretch;
+  padding-top: 0;
+  padding-bottom: 0;
+  font-size: 1rem;
+  margin: 0;
+  white-space: nowrap;
+  display: inline-block;
+  vertical-align: middle;
+  font-family: inherit;
+  padding: 0 1em;
+  border: 1px solid transparent;
+  transition: background-color .25s ease-out,color .25s ease-out;
+  font-size: .9rem;
+  line-height: 1;
+  text-align: center;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #ff3340cc;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
 }
